one step closer for fixing spacing problem

--- a/app/assets/stylesheets/components/_dropdown.scss
+++ b/app/assets/stylesheets/components/_dropdown.scss
@@ -5,11 +5,11 @@
 
 .icon{
   width: 125%;
-  border:none;
-  border-radius:43%;
-  padding:3rem 7rem;
-  font-size:18px;
-  cursor:pointer;
+  border: none;
+  border-radius: 34%;
+  margin-top: auto;
+  cursor: pointer;
+  padding: 30%;
 }
 
 .dropdown-options {
