--- a/app/assets/stylesheets/home/_personal.scss
+++ b/app/assets/stylesheets/home/_personal.scss
@@ -31,22 +31,27 @@
   text-decoration: none;
 }
 
+.personal-information {
+  flex: 1;
+  overflow: hidden;
+}
+
 .personal p {
-  position: relative;
-  display: flex;
+  display: block;
+  overflow-y: auto;
   color: $black;
   font-family: 'Ubuntu', sans-serif;
   font-weight: bold;
   background-color: $white;
-  height: 19%;
-  width: 80%;
+  height: 90%;
+  width: 90%;
   border: 2px solid $black;
   border-radius: 15px;
   margin-top: 2%;
-  margin-left: 10%;
+  margin-left: 5%;
   font-size: 2vw;
   padding-left: 2%;
   padding-top: 1%;
-  overflow-y: scroll;
-  text-decoration: none;
+  padding-right: 2%;
+  box-sizing: border-box;
 }
