--- a/app/assets/stylesheets/home/_photo_card_home.scss
+++ b/app/assets/stylesheets/home/_photo_card_home.scss
@@ -31,6 +31,7 @@
   display: flex;
   margin-left: 5%;
   width: 90%;
+  height: 73%;
   border-radius: 15px;
   border: 2px solid $black;
   margin-top: 2%;
